--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -2,6 +2,9 @@
     color: white;
     background-color: rgba(17, 98, 255, 1);
     font-family: 'Courier New', Courier, monospace;
+    font-size: 1rem;
+
+    min-width: fit-content;
 
     border-right: 1.75px solid black;
     border-bottom: 1.75px solid black;
@@ -11,9 +14,12 @@
     border-top-left-radius: 0px;
     border-bottom-left-radius: 0px;
 
-    width: 80px;
-    height: 29px;
+    padding: 1rem 0.75rem;
 
     margin: 0px;
     gap: 0px;
+
+    &:focus {
+        outline: none;
+    }
 }
