--- a/src/components/Input/Input.css
+++ b/src/components/Input/Input.css
@@ -1,6 +1,7 @@
 .input-task-name {
     background-color: white;
     font-family: 'Courier New', Courier, monospace;
+    font-size: 1rem;
 
     border-left: 1.75px solid black;
     border-bottom: 1.75px solid black;
@@ -10,9 +11,14 @@
     border-top-right-radius: 0px;
     border-bottom-right-radius: 0px;
 
-    height: fit-content;
-    min-width: 1200px;
-
+    width: 100%;
+    padding-left: 1.25rem;
+    
     margin: 0px;
-    gap: 0px;
+    gap: 0px; 
+
+    &:focus {
+        outline: none;
+    }
 }
+
