--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,8 @@
 * {
-    background-color: #1C1C1C;
+    background-color: #1c1c1c;
 }
 
 .input-section {
-
     display: flex;
     flex-direction: row;
     align-items: stretch;
@@ -15,26 +14,30 @@
 }
 
 .task-list {
+    max-width: calc(75rem - 2rem);
+    min-height: 0.625rem;
+
+    margin: 0 auto;
+
+    background: white;
+
+    padding: 1rem;
+
+    min-height: 40px;
+
+    background: transparent;
 
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
 
-    max-width: 75rem;
-    height: auto;
-
-    margin: 0px auto;
-
-    border: 0.0625rem solid #C6C6C6;
+    border: 0.0625rem solid #c6c6c6;
     border-radius: 0.25rem;
-
-    padding: 1rem;
     gap: 0.625rem;
 }
 
 .task-list li {
-    
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -42,6 +45,5 @@
 
     margin: 0px auto;
 
-    padding: 1rem;
     gap: 0.6rem;
 }
