--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -23,3 +23,44 @@
         outline: none;
     }
 }
+
+.trash-bin-icon {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+
+    height: 2.5rem;
+    width: 2.5rem;
+
+    border: 0.0625rem solid #1c1c1c;
+    border-radius: 0.25rem;
+
+    background-color: #890000;
+    gap: 2px;
+}
+
+.trash-bin-icon svg {
+    background-color: #890000;
+}
+
+.revrite-icon {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+
+    height: 2.5rem;
+    width: 2.5rem;
+
+    border: 0.0625rem solid #1c1c1c;
+    border-radius: 0.25rem;
+
+    background: #1162FF;
+    padding: 0.5rem;
+    gap: 2px;
+}
+
+.revrite-icon svg {
+    background-color: #1162FF;
+}
