--- a/src/components/Input/Input.css
+++ b/src/components/Input/Input.css
@@ -1,6 +1,7 @@
 .input-task-name {
     background-color: white;
     font-family: "Courier New", Courier, monospace;
+    color: white;
     font-size: 1rem;
 
     border-left: 1.75px solid #c6c6c6;
